@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="manifest.appcache">
+<html lang="en" manifest="manifest.appcache"> 
 <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://openlayers.org/en/v4.2.0/css/ol.css" type="text/css">
@@ -565,7 +565,6 @@
         <script src="js/chartist.min.js" type="text/javascript"></script>
         <script src="js/jszip.min.js" type="text/javascript"></script>
         <script src="jsDev/dataProcessing.js" type="text/javascript"></script>
-        <script src="jsDev/model.js" type="text/javascript"></script>
         <script src="jsDev/mapFunctionality.js" type="text/javascript"></script>
         <script src="jsDev/testFunctions.js" type="text/javascript"></script>
         <script src="jsDev/FileSaver.min.js" type="text/javascript"></script>
