@@ -10,41 +10,6 @@ var canvasImage;
 var imageLayer;
 var addPopFunction;
 
-/*
-function setupGradient(){
-        var gradient = [];
-        var hotColor = [];
-        hotColor[0] = parseInt(highColorCode.substring(1, 3) , 16);
-        hotColor[1] = parseInt(highColorCode.substring(3, 5) , 16);
-        hotColor[2] = parseInt(highColorCode.substring(5, 7) , 16);
-
-        var coolColor = [];
-        coolColor[0] = parseInt(lowColorCode.substring(1, 3) , 16);
-        coolColor[1] = parseInt(lowColorCode.substring(3, 5) , 16);
-        coolColor[2] = parseInt(lowColorCode.substring(5, 7) , 16);
-
-        console.log("hot color: " + hotColor + " and cool color: " + coolColor);
-
-        var redRange = hotColor[0] - coolColor[0];
-        var greenRange = hotColor[1] - coolColor[1];
-        var blueRange = hotColor[2] - coolColor[2];
-
-        var gradientSteps = simData.carryCapacity - 1;
-
-        for(var i = 0; i <= gradientSteps; i++){
-                var colorOffset = i / (gradientSteps);
-                var tempColor = [];
-                tempColor[0] = Math.round(redRange * colorOffset) + coolColor[0];
-                tempColor[1] = Math.round(greenRange * colorOffset) + coolColor[1];
-                tempColor[2] = Math.round(blueRange * colorOffset) + coolColor[2];
-                gradient.push(tempColor.slice());
-        }
-
-        console.log(gradient);
-        return gradient;
-}
-*/
-
 function placePopulation(e){
         var tempFeatures = [];
         map.forEachFeatureAtPixel(e.pixel, function(feature, layer) {
@@ -122,46 +87,6 @@ function styleFunction() {
         ];
 }
 
-/*
-function drawHeatMap(matrix){
-        console.log("starting drawHeatMap: ");
-
-        var gradient = setupGradient();
-        var gradientSteps = simData.carryCapacity - 1;
-
-        for(var y = 0; y < simResults.ySize - 1; y++){
-                console.log("starting row: " + y);
-                for(var x = 0; x < simResults.xSize - 1; x++){
-                        var tempPolygon = new ol.geom.Polygon([[
-                                [matrix[y][x][1], matrix[y][x][0]],
-                                [matrix[y][x][1], matrix[y + 1][x][0]],
-                                [matrix[y + 1][x + 1][1], matrix[y + 1][x + 1][0]],
-                                [matrix[y][x + 1][1], matrix[y][x][0]],
-                                [matrix[y][x][1], matrix[y][x][0]]
-                        ]]);
-
-                        var tempFeature = new ol.Feature({
-                                name: ("pos" + x + "," + y),
-                                geometry: tempPolygon
-                        });
-
-                        var gradientPosition = Math.ceil(gradientSteps * (1 - (simResults.grid[simData.years][y][x] / simData.carryCapacity)));
-                        if(gradientPosition < 0 || !gradientPosition){
-                                gradientPosition = 0;
-                        }
-
-                        var teststyle = new ol.style.Style({
-                                fill: new ol.style.Fill({ color: [gradient[gradientPosition][0], gradient[gradientPosition][1], gradient[gradientPosition][2], 0.5]}) //color: [255, 0, 0, (1 - (grid[years][y][x] / carryCapacity))]
-                        });
-                        tempFeature.setStyle(teststyle);
-                        features.addFeature(tempFeature);
-                }
-        }
-
-        pointVector.setVisible(false);
-}
-*/
-
 function setupOlInputMap(){
         var teststyle = new ol.style.Style({
                 fill: new ol.style.Fill({ color: [0, 255, 0, 0.3]})
@@ -232,23 +157,31 @@ function getExtent(){
         map.getView().setCenter([coords[0],coords[3]]);
 }
 
-function generateCanvas(year, scale, data, dest){
+function generateCanvas(year, scale, imgArray, dest){
         console.log("generating canvas for year: " + year + " and scale: " + scale);
+        console.log("data length: " + imgArray.length + " xSize: " + simResults.xSize);
         canvas = document.createElement('canvas');
         var ctx = canvas.getContext('2d');
 
         canvas.width = simResults.xSize * scale;
         canvas.height = simResults.ySize * scale;
-        
-        ctx.putImageData(data, 0, 0);
-        canvasImage = new Image();
+
+        let picData = new ImageData(imgArray, simResults.xSize, simResults.ySize);
+
+        ctx.putImageData(picData, 0, 0);
+        let canvasImage = new Image();
         canvasImage.id = 'image' + year;
 
-        switch()
-        canvasImage.onload = function(){
-                drawCanvasToMap()
-        };
-        
+        switch(dest){
+        case 'mapViewer':
+                canvasImage.onload = function(){drawCanvasToMap(canvasImage)};
+                break;
+        case 'save':
+                break;
+        case 'saveAll':
+                break;
+        }
+
         canvasImage.src = canvas.toDataURL();
 }
 
@@ -279,113 +212,6 @@ function drawCanvasToMap(canvasImage){
 
         imageLayer.set('name', 'imgLayer');
         map.addLayer(imageLayer);
-}
-        
-function generateCanvas(curYear, scale){
-        console.log("generating canvas for year: " + curYear + " and scale: " + scale);
-        //towns[0].printOfftake();
-        var gradient = setupGradient();
-        var gradientSteps = simData.carryCapacity - 1;
-
-        canvas = document.createElement('canvas');
-        var ctx = canvas.getContext('2d');
-
-        canvas.width = simResults.xSize * scale;
-        canvas.height = simResults.ySize * scale;
-
-        var imgData=ctx.getImageData(0, 0, simResults.xSize * scale, simResults.ySize * scale);
-        var data=imgData.data;
-
-        var pos = 0;
-        for(var y = 0; y < simResults.ySize; y++) {
-                for(var row = 0; row < scale; row++){
-                        for(var x = 0; x < simResults.xSize; x++) {
-                                //TODO talk to Taal about using floor vs ceiling
-                                var gradientPosition = Math.ceil(gradientSteps * (1 - (simResults.grid[curYear][y][x] / simData.carryCapacity)));
-                                if(gradientPosition < 0 || !gradientPosition){
-                                        for(let s = 0; s < scale; s++){
-                                                data[pos] = gradient[0][0];
-                                                data[pos + 1] = gradient[0][1];
-                                                data[pos + 2] = gradient[0][2];
-                                                data[pos + 3] = 255;
-                                                pos += 4;
-                                        }
-                                }
-                                else{
-                                        for(let s = 0; s < scale; s++){
-                                                data[pos] = gradient[gradientPosition][0];           // some R value [0, 255]
-                                                data[pos + 1] = gradient[gradientPosition][1];           // some G value
-                                                data[pos + 2] = gradient[gradientPosition][2];           // some B value
-                                                data[pos + 3] = 255;
-                                                pos += 4;
-                                        }
-                                }
-                        }
-                }
-        }
-
-        ctx.putImageData(imgData, 0, 0);
-        canvasImage = new Image();
-        canvasImage.id = 'image' + curYear;
-
-        canvasImage.src = canvas.toDataURL();
-
-        canvasImage.onload = function(){
-                console.log("picture: " + canvasImage.naturalHeight);
-                console.log("picture: " + canvasImage.naturalWidth);
-                document.getElementById("rawHeatmapContainer").appendChild(canvasImage);
-
-                var tempLength = simResults.geoGrid.length - 1;
-                var tempPoint = simResults.geoGrid[tempLength][simResults.geoGrid[tempLength].length - 1];
-
-                console.log("top corner: " + simResults.geoGrid[0][0] + " bot corner: " + tempPoint);
-                console.log("extent: " + [simResults.geoGrid[0][0][1], tempPoint[0], tempPoint[1], simResults.geoGrid[0][0][0]]);
-
-                if(imageLayer){
-                        map.removeLayer(imageLayer);
-                }
-
-                imageLayer = new ol.layer.Image({
-                        opacity: 0.8,
-                        source: new ol.source.ImageStatic({
-                            url: canvasImage.src,
-                            imageSize: [canvasImage.naturalWidth, canvasImage.naturalHeight],
-                            projection: map.getView().getProjection(),
-                            imageExtent: [simResults.geoGrid[0][0][1], tempPoint[0], tempPoint[1], simResults.geoGrid[0][0][0]]
-                        })
-                });
-
-                imageLayer.set('name', 'imgLayer');
-
-                /*
-                var projection = new ol.proj.Projection({
-                        projection: 'EPSG:4326'
-                });
-
-                var map2 = new ol.Map({
-                        layers: [
-                          new ol.layer.Image({
-                            source: new ol.source.ImageStatic({
-                              url: canvasImage.src,
-                              projection: projection,
-                              imageExtent: [geoGrid[0][0][1], tempPoint[0], tempPoint[1], geoGrid[0][0][0]]
-                            })
-                          })
-                        ],
-                        target: 'testMap2',
-                        view: new ol.View({
-                          projection: projection,
-                          zoom: 2,
-                          maxZoom: 8
-                        })
-                });
-                */
-                //var tempLayers = map.getLayers();
-                //for(var c = 0; c < tempLayers.getLength(); c++){
-                //        tempLayers.item(c).setVisible(false);
-                //}
-                map.addLayer(imageLayer);
-        };
 }
 
 function drawHeatmap(){
