@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# manifest v17b
+# manifest v18
 
 CACHE:
 index.html
